apps/lidarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
spec:
  replicas: 1
  serviceName: lidarr
  selector:
    matchLabels:
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - name: lidarr
          image: lidarr
          ports:
            - name: http
              containerPort: 8686
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /ping
              port: http
            timeoutSeconds: 5
            failureThreshold: 360
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: rclone-config
          configMap:
            name: lidarr-rclone
        - name: run
          emptyDir: {}
        - name: startup-config
          secret:
            secretName: lidarr
