apps/lidarr/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  ports:
    - name: http
      port: 8686
      targetPort: http
  selector:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/name: lidarr
