apps/lidarr/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
spec:
  defaultBackend:
    service:
      name: lidarr
      port:
        name: http
  tls:
    - hosts:
        - lidarr
